# Piper_arm

./: .gitignore  ACTIVE_SCAN_NOTES.md  BASE_FRAME_DRY_RUN.md  CLEAN_INSTALL.md  DOCKER_FOXY_COMMANDS.md  Dockerfile.foxy  OPERATOR_COMMANDS.md  README.md  SUPERVISED_WORKFLOW_HANDOFF.md  calibrate_bounds  calibrate_bounds.sh  disable_piper  disable_piper.sh  enable_piper  enable_piper.sh  install_host_dependencies.sh  piper_calibrate_bounds.py  piper_gui_native.py  piper_joint_bounds.json  reset_arm  reset_arm.py  reset_arm.sh  reset_piper  reset_piper.py  reset_piper.sh  start_GUI  start_bridge  start_bridge.sh  start_gui  start_gui.sh  start_piper  start_piper.sh  stop_bridge  stop_bridge.py  tiny_joint_test.py  tiny_movement  verify_installation.sh
AI_perception_tests/: README.md  batch_static_analysis.py  batch_static_analysis.sh  benchmark_sam2_video.py  create_manifest.sh  create_test_manifest.py  heavy_model_worker.py  run_static_analysis.sh  run_temporal_tracking.py  sam2_live_worker.py  static_scene_analyzer.py  summarize_test_set.py  summarize_test_set.sh  temporal_heavy_refresh.py  temporal_tracking.py  test_groundingdino_target_selection.py  test_heavy_model_worker.py  test_sam2_live_worker.py  test_temporal_tracking.py
AI_perception_tests/groundingdino_test/: README.md  batch_groundingdino.py  batch_run.sh  batch_sam2_refine.py  check_env.sh  check_groundingdino_env.py  fetch_ai_assets.sh  requirements_ai.txt  run_groundingdino_on_capture.py  run_one.sh  sam2_refine_on_capture.py  setup_cpu_env.sh  setup_gpu_env.sh  summarize_ai_results.py
AI_perception_tests/outputs/: analysis.yaml
AI_perception_tests/outputs/capture_20260616_121630/: analysis.yaml
AI_perception_tests/outputs/capture_20260616_121648/: analysis.yaml
AI_perception_tests/outputs/capture_20260616_121655/: analysis.yaml
AI_perception_tests/outputs/capture_20260616_121707/: analysis.yaml
AI_perception_tests/outputs/capture_20260616_121718/: analysis.yaml
AI_perception_tests/outputs/capture_20260616_121736/: analysis.yaml
AI_perception_tests/test_sets/: README.md
L515_camera/: README.md  build_realsense_ws.sh  capture_hand_eye_sample.py  capture_snapshot.py  capture_snapshot.sh  capture_temporal_sequence.sh  check_l515_detection_connector.sh  check_l515_ros.sh  diagnose_l515_usb.sh  extract_dataset_frames.sh  fetch_realsense_sources.sh  install_l515_host_fixes.sh  install_realsense_build_deps.sh  l515_camera.rviz  l515_camera_notes.md  publish_hand_eye_tf.py  realsense_l515_version_notes.md  record_l515_dataset.sh  run_fixed_board_validation.sh  run_gpu_geometry.sh  run_gpu_vision_pipeline.sh  run_hand_eye_tf.sh  run_heavy_model_worker.sh  run_heavy_refresh_bridge.sh  run_l515_perception.sh  run_sam2_live_bridge.sh  run_sam2_live_worker.sh  run_supervised_cube_workflow.sh  run_target_cloud.sh  run_temporal_tracking_readonly.sh  run_vlm_tracking.sh  run_yolo_tracking.sh  solve_hand_eye.py  source_l515_environment.sh  start_l515_camera.sh  start_l515_camera_low_bandwidth.sh  validate_fixed_board.py  view_l515_camera.sh  view_l515_debug.sh  view_l515_opencv.py  (+5 more)
L515_camera/patches/: realsense-ros-4.0.4-l515-foxy.patch  realsense-ros-4.0.4-no-default-profile-fallback.patch
piper_ros_foxy/src/piper_mobile_manipulation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
piper_ros_foxy/src/piper_mobile_manipulation/config/: camera_params.yaml  detection_params.yaml  fake_visual_servo_params.yaml  frames.yaml  manipulation_params.yaml  obstacle_instance_3d_params.yaml  occlusion_checker_params.yaml  safety_params.yaml  scan_capture_params.yaml  scan_planning_params.yaml  scan_quality_params.yaml  supervised_cube_workflow_params.yaml  target_error_params.yaml  temporal_tracking_params.yaml  tracking_params.yaml  vlm_detection_params.yaml  yolo_seg_detection_params.yaml
piper_ros_foxy/src/piper_mobile_manipulation/launch/: active_scan_capture_debug.launch.py  active_scan_debug.launch.py  fake_manipulation.launch.py  full_system.launch.py  full_visual_servo.launch.py  gpu_geometry.launch.py  handoff_only.launch.py  perception_only.launch.py  supervised_cube_workflow.launch.py  temporal_tracking_readonly.launch.py  tracking_only.launch.py  vlm_tracking.launch.py  yolo_tracking.launch.py
piper_ros_foxy/src/piper_mobile_manipulation/msg/: Detection2D.msg  HandoffTarget.msg  ManipulationCommand.msg  ManipulationState.msg  ObstacleInstance3D.msg  ObstacleInstance3DArray.msg  RemovalPlan.msg  ScanStatus.msg  ScanViewpoint.msg  ScanViewpointArray.msg  SceneObject.msg  SceneObjectArray.msg  ServoCommand.msg  Target3D.msg  TargetError.msg  TargetEstimate.msg  TrackedTarget.msg
piper_ros_foxy/src/piper_mobile_manipulation/piper_mobile_manipulation/: active_scan_debug_overlay_node.py  depth_to_3d_node.py  fake_arm_interface_node.py  fake_visual_servo_node.py  heavy_refresh_bridge_node.py  l515_object_detector_node.py  manipulation_state_machine_node.py  manipulation_target_node.py  mask_to_detection_node.py  object_frame_broadcaster_node.py  obstacle_geometry.py  obstacle_instance_3d_node.py  obstacle_repeatability_validator.py  occlusion_checker_node.py  safe_servo_node.py  sam2_live_bridge_node.py  scan_capture_node.py  scan_quality_node.py  scan_viewpoint_planner_node.py  supervised_cube_workflow_node.py  supervised_workflow.py  target_cloud_node.py  target_error_node.py  target_handoff_node.py  target_landmark_geometry.py  target_landmark_node.py  target_tracker_node.py  temporal_mask_tracker_node.py  tf_target_transform_node.py  viewpoint_reachability_filter_node.py  vlm_detector_node.py  yolo_seg_detector_node.py
piper_ros_foxy/src/piper_mobile_manipulation/piper_mobile_manipulation/utils/: geometry.py  icp.py  kalman_filter.py  piper_kinematics.py  safety.py  states.py  temporal_tracking.py  transforms.py
piper_ros_foxy/src/piper_mobile_manipulation/srv/: ScanCommand.srv
piper_ros_foxy/src/piper_mobile_manipulation/test/: test_icp.py  test_obstacle_geometry.py  test_piper_kinematics.py  test_supervised_workflow.py  test_target_landmark_geometry.py
(+278 files in other folders)
